ingress_ex1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-ecommerce
  spec:
    IngressClassName: nginx-example
    rules:
    -host: ecommerce.example.com
    http:
      paths:
      - path: /api/login/
        pathType: Prefix
        backend:
          service:
            name: login-service
            port:
              number: 8080
      - path: /api/product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8081
      - path: /api/payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 8082
